# classicube-chatsounds-plugin

./: Cargo.toml  README.md  flake.nix
.cargo/: config.toml
.github/workflows/: build.yml  release.yml  rust.yml  update-lock-files.yml
src/: app_name.rs  chat.rs  chatsounds.rs  command.rs  entities.rs  entity_emitter.rs  events.rs  helpers.rs  lib.rs  logger.rs  option.rs  plugin.rs  printer.rs  tablist.rs  thread.rs
src/chatsounds/: mod.rs
src/command/: mod.rs  owned_chat_command.rs
src/events/: mod.rs
src/events/handlers/: mod.rs
src/events/handlers/incoming/: chat.rs  mod.rs  tick.rs
src/events/handlers/outgoing/: chat.rs  mod.rs
src/modules/: app_name.rs  command.rs  futures.rs  mod.rs  option.rs  shared.rs
src/modules/autocomplete/: chat.rs  mod.rs
src/modules/autocomplete/chat/: tests.rs
src/modules/chatsounds/: entity_emitter.rs  event_listener.rs  mod.rs  random.rs  send_entity.rs
src/modules/entities/: entity.rs  mod.rs
src/modules/event_handler/: callbacks.rs  mod.rs  outgoing_events.rs  types.rs
src/modules/tab_list/: entry.rs  mod.rs
