[package]
name = "classicube-chatsounds-plugin"
version = "4.4.8"
authors = ["SpiralP <spiral.palmer@gmail.com>"]
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { version = "=1.0.102", features = ["backtrace"] }
chatsounds = { git = "https://github.com/SpiralP/rust-chatsounds.git", branch = "main" }
classicube-helpers = { git = "https://github.com/SpiralP/rust-classicube-helpers.git", branch = "main" }
classicube-sys = "=6.0.4"
color-backtrace = { git = "https://github.com/SpiralP/color-backtrace-msgbox.git", branch = "master" }
crossbeam-channel = "=0.5.15"
futures = "=0.3.32"
kira = { version = "=0.12.1", default-features = false }
ncollide3d = "=0.33.0"
parking_lot = "=0.12.5"
rand = "=0.10.1"
rand_chacha = "=0.10.0"
tokio = { version = "=1.52.3", features = ["full"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }


# [patch."https://github.com/SpiralP/rust-chatsounds.git"]
# chatsounds = { path = "../rust-chatsounds" }
